1 - Updating password now correctly propagates to all user Services' databases 2 - Admin panel has a link to go back to public website 3 - Username and email are turned lower case upon registration and login both client and server side

--- a/accesscontrol/templates/accesscontrol/profile.html
+++ b/accesscontrol/templates/accesscontrol/profile.html
@@ -75,7 +75,7 @@
                                     {% if srvc.config.logo.name %}
                                         <img src="{{ srvc.config.logo.url }}"/>
                                     {% else %}
-                                        <img src="{% static 'ikwen/img/no_photo.png' %}"/>
+                                        <img src="{% static 'ikwen/img/logo-placeholder.jpg' %}"/>
                                     {% endif %}
                                     <h4>{{ srvc.project_name }}</h4>
                                 </div>
