--- a/accesscontrol/templates/accesscontrol/register.html
+++ b/accesscontrol/templates/accesscontrol/register.html
@@ -1,6 +1,5 @@
 {% extends "core/base_bs.html" %}
-{% load i18n %}
-{% load staticfiles %}
+{% load i18n staticfiles auth_tokens %}
 
 {% block page_title %}<title>{{ service.project_name }} - {% trans "Register" %} </title>{% endblock %}
 {% block head_style %}
@@ -170,12 +169,13 @@
                             </p>
                         {% else %}
                             <p id="terms-warning" class="col-sm-11 col-md-10">
+                            {% url 'ikwen:terms_and_conditions' as ikwen_eula_url %}
                                 {% trans "You are about to create an account managed by" %} <a
                                     href="{{ settings.IKWEN_BASE_URL }}"
                                     style="color: #999; text-decoration: underline"><strong>ikwen</strong></a>,
                                 {% trans "on" %} {{ service.project_name }}.
                                 {% trans "By doing so you accept" %} <a
-                                    href="{% url 'ikwen:terms_and_conditions' %}"><strong>ikwen</strong> {% trans "Terms & Conditions" %}
+                                    href="{{ ikwen_eula_url|ikwenize }}"><strong>ikwen</strong> {% trans "Terms & Conditions" %}
                             </a>, {% trans "as well as" %}
                                 <a href="{{ settings.AGREEMENT_URL }}">{{ service.project_name }} {% trans "Terms & Conditions" %}.</a>
                             </p>
@@ -216,14 +216,15 @@
                     $formGroup = $('.form-group.email'),
                     $email = $('#rg-email');
                 if (username.isValidEmail()) {
-                    $email.removeClass('required').val(username);
-                    $formGroup.css('overflow', 'hidden').animate({height: 0, marginBottom: 0});
+                    $formGroup.css('overflow', 'hidden').animate({height: 0, marginBottom: 0}, 'normal', 'linear', function() {
+                        $email.removeClass('required').val(username).attr('type', 'hidden');
+                    });
                     return;
                 }
-                $email.addClass('required').val('');
                 var h = $('.form-group.username').height() + 5;
                 $formGroup.animate({height: h + 'px', marginBottom: '15px'}, 'normal', 'linear', function () {
-                    $formGroup.css('overflow', 'unset')
+                    $formGroup.css('overflow', 'unset');
+                    $email.addClass('required').val('').attr('type', 'text');
                 })
             }).focus();
             $('#rg-email').blur(testEmail);
