--- a/core/templates/core/cloud_setup/deploy.html
+++ b/core/templates/core/cloud_setup/deploy.html
@@ -4,9 +4,11 @@
 {% block page_title %}<title>{{ app.name }} - {% trans "Deploy Cloud" %}</title>{% endblock %}
 {% block head_style %}
     {{ block.super }}
+    <link rel='stylesheet' href="{% static 'ikwen/swiper/css/swiper.min.css' %}" />
     <style type="text/css">
         #navbar {background: none}
         #navbar .navbar-brand {color: #888; display: none; font-weight: 700}
+        #navbar a {color: #888}
         #navbar form.search {
             display: none
         }
@@ -14,6 +16,10 @@
         .btn-icon {border: 1px solid; border-radius: 3px; cursor: pointer; font-size: 15px; height: 33px;
             line-height: 31px; text-align: center; width: 33px}
         .btn-icon.glyphicon-plus {padding-left: 2px}
+        @media (max-width: 767px) {
+            input.amount {margin-top: 4px}
+            .btn-icon {float: right; margin: 2px 15px 0 0 }
+        }
         .results.customers {background: #fff; position: absolute; z-index: 10}
         #content form ul.errorlist {
             padding-left: 0
@@ -44,7 +50,7 @@
             <p class="text-muted" style="margin-bottom: 2em; text-align: center">
                 <img src="{{ settings.IKWEN_MEDIA_URL }}{{ app.logo.name }}" width="45" />
                 <span>
-                    {% blocktrans with app_name=app.name %}Create {{ app_name }} website{% endblocktrans %}
+                    {% blocktrans with app_name=app.name %}Create your {{ app_name }} website{% endblocktrans %}
                 </span>
             </p>
             {% if form.errors and settings.DEBUG %} <div class="alert alert-danger"> {{ form.errors }}</div> {% endif %}
@@ -110,13 +116,17 @@
             {% if can_choose_themes %}
             <div style="background: #222; margin-top: 1em; padding: .5em 0 2em">
                 <div class="container">
-                    <h4 style="color: #ddd; margin-bottom: 1.2em">{% trans "Choose template" %}</h4>
-                    <div class="col-sm-10 col-md-9">
-                        {% for theme in theme_list %}
-                            <div class="col-sm-4 theme{% if forloop.counter == 1 %} active{% endif %}" data-id="{{ theme.id }}">
-                                <img src="{{ settings.IKWEN_MEDIA_URL }}{{ theme.preview.name }}" class="img-responsive"/>
-                            </div>
-                        {% endfor %}
+                    <h4 style="color: #ddd; margin-bottom: 1.2em">{% trans "Choose theme" %}</h4>
+                    <div class="swiper-container" style="padding: 10px; margin-left: -10px">
+                        <div class="swiper-wrapper">
+                            {% for theme in theme_list %}
+                                <div class="swiper-slide theme{% if forloop.counter == 1 %} active{% endif %}" data-id="{{ theme.id }}">
+                                    <img src="{{ settings.IKWEN_MEDIA_URL }}{{ theme.preview.name }}" class="img-responsive"/>
+                                </div>
+                            {% endfor %}
+                        </div>
+                        <div class="swiper-button-next"></div>
+                        <div class="swiper-button-prev"></div>
                     </div>
                 </div>
             </div>
@@ -243,7 +253,7 @@
                             <div class="col-sm-4 col-md-3">
                                 <input class="form-control input-sm amount" type="text" placeholder="{% trans "Amount" %}" />
                             </div>
-                            <div class="pull-left">
+                            <div>
                                 <i class="btn-icon remove-service glyphicon glyphicon-minus text-danger"></i>
                             </div>
                         </div>
@@ -254,7 +264,7 @@
                             <div class="col-sm-4 col-md-3">
                                 <input class="form-control input-sm amount" type="text" name="amount0" placeholder="{% trans "Amount" %}" />
                             </div>
-                            <div class="pull-left">
+                            <div>
                                 <i class="btn-icon add-service glyphicon glyphicon-plus text-success"></i>
                             </div>
                         </div>
@@ -281,6 +291,7 @@
 {% endblock %}
 {% block js %}
     {{ block.super }}
+    <script src="{% static 'ikwen/swiper/js/swiper.jquery.min.js' %}"></script>
     <script type="text/javascript">
         (function () {
             $('#billing-plan').change(function() {
@@ -335,6 +346,24 @@
             }];
             $('#customer-name').focusout(function() {$('.results.customers').fadeOut()});
             ikwen.setupSearch('#customer-name', '.results.customers', searchDescriptor);
+
+            var swiper = new Swiper('.swiper-container', {
+                slidesPerView: 3,
+                spaceBetween: 20,
+                nextButton: '.swiper-button-next',
+                prevButton: '.swiper-button-prev',
+                breakpoints: {
+                    992: {
+                        spaceBetween: 15
+                    },
+                    768: {
+                        slidesPerView: 2
+                    },
+                    425: {
+                        slidesPerView: 1
+                    }
+                }
+            });
         })()
     </script>
     {{ config.scripts|safe }}
