--- a/accesscontrol/templates/accesscontrol/forgotten_password.html
+++ b/accesscontrol/templates/accesscontrol/forgotten_password.html
@@ -9,21 +9,12 @@
     {{ block.super }}
     <style type="text/css">
         #navbar .search, #navbar .navbar-right {display: none}
-        #content {padding-top: 80px; margin-top: 5%}
-        #content > div {margin: auto}
-        div#forgotten-pwd {width: 360px}
-        div#forgotten-pwd form {border: 2px solid #dce4ec; border-radius: 4px; margin-top: 60px; padding: 30px}
-        @media (max-width: 768px) {
-            #content {margin-top: 120px}
-            #content div#forgotten-pwd {margin: auto; width: 96%}
-        }
-        .directions {font-size: 16px; margin-top: 90px; text-align: center}
         div.success, div.failure {margin: 60px 0 15px; padding: 10px}
     </style>
 {% endblock %}
 
 {% block content %}
-    <div id="content" class="container">
+    <div id="content" class="form container">
         {% if request.GET.success %}
             <div class="success">
                 {% trans "Instructions to reset you password were sent to your e-mail." %}
@@ -42,7 +33,7 @@
                 {% trans "Please provide your email to receive password reset information." %}
                 {# TODO: Allow people to retrieve password with phone number as well #}
             </div>
-            <div id="forgotten-pwd">
+            <div id="forgotten-pwd" class="form-wrapper">
                 <form method="post" action="{% url 'ikwen:forgotten_password' %}"> {% csrf_token %}
                     <div class="form-group">
                         <label for="lg-username">Email</label>
