--- a/accesscontrol/templates/accesscontrol/register.html
+++ b/accesscontrol/templates/accesscontrol/register.html
@@ -8,59 +8,12 @@
         #navbar .search, #navbar .navbar-right {
             display: none
         }
-        #content {
-            margin-top: 5%
-        }
 
-        @media (min-width: 415px) {
-            #content {
-                margin-top: 2%
-            }
-        }
-
-        @media (min-width: 992px) {
-            #content {
-                margin-top: 7%
-            }
-        }
-
-        #content > div {
-            margin: auto
-        }
-
-        #content form {
-            margin-top: 25px
-        }
-
-        @media (max-width: 768px) {
-            #content div#login {
-                margin: auto;
-                width: 96%
-            }
-        }
-
-        label span {
-            font-weight: normal
-        }
+        #content.form form {border: none; padding: 0}
 
         #terms-warning {
             color: #999;
             font-size: 11px
-        }
-
-        {#        #terms-warning a {color: #999}#}
-        #content form .hint {
-            color: #8D96C5;
-            font-size: 14px
-        }
-
-        #content form ul.errorlist {
-            padding-left: 0
-        }
-
-        #content form ul.errorlist li {
-            color: #FF0808;
-            list-style-type: none
         }
 
         #register .brand, #register .title {
@@ -94,7 +47,7 @@
 {% endblock %}
 
 {% block content %}
-    <div id="content" class="container">
+    <div id="content" class="form container">
         {% if request.GET.msg %}
             <p class="failure" style="font-size: 1em; padding: 9px">{{ request.GET.msg }}</p>
         {% endif %}
