--- a/accesscontrol/templates/accesscontrol/set_new_password.html
+++ b/accesscontrol/templates/accesscontrol/set_new_password.html
@@ -7,28 +7,18 @@
     {{ block.super }}
     <style  type="text/css">
         #navbar .search, #navbar .navbar-right {display: none}
-        #content {margin-top: 9%}
-        #content > div {margin: auto}
-        #content form {margin-top: 25px}
-        div#set-password {width: 360px}
-        div#set-password form {border: 2px solid #dce4ec; border-radius: 4px; padding: 30px}
-        @media (max-width: 768px) {
-            #content {margin-top: 120px}
-            #content div#set-password {margin: auto; width: 96%}
-        }
-        .directions {font-size: 16px; margin-top: 90px; text-align: center}
     </style>
 {% endblock %}
 
 {% block content %}
-    <div id="content" class="container">
+    <div id="content" class="form container">
         {% if form.errors %}
             <p class="failure" style="font-size: 1em; padding: 9px">{{ form.errors }}</p>
         {% endif %}
         <div class="directions">
             {% trans "Please choose a new password and confirm." %}
         </div>
-        <div id="set-password">
+        <div id="set-password" class="form-wrapper">
             <form action="{% url 'ikwen:set_new_password' uidb64 token %}" method="post">{% csrf_token %}
                 <div class="form-group">
                     <label for="lg-password">{% trans "New Password" %}</label>
