--- a/core/templates/core/cloud_setup/deploy.html
+++ b/core/templates/core/cloud_setup/deploy.html
@@ -9,7 +9,7 @@
         #navbar {background: none}
         #navbar .navbar-brand {color: #888; display: none; font-weight: 700}
         #navbar a {color: #888}
-        #navbar form.search {
+        #navbar .menu-button, #navbar-search {
             display: none
         }
         .section-title {color: #666; margin: 2em 0 1em}
