--- a/core/templates/core/iframe_admin.html
+++ b/core/templates/core/iframe_admin.html
@@ -5,8 +5,11 @@
 {% endblock %}
 
 {% block admin_content %}
-    <div id="admin-content" class="container-fluid embed">
-        <iframe id="billing-stage" src="{{ iframe_url }}"></iframe>
+    <div id="admin-content" class="no-edge-panel-right">
+        <div class="container-fluid embed">
+            <iframe id="billing-stage" src="{{ iframe_url }}"></iframe>
+            <div class="clearfix"></div>
+        </div>
     </div>
 {% endblock %}
 
