--- a/static/ikwen/css/console.css
+++ b/static/ikwen/css/console.css
@@ -1,16 +1,48 @@
 
-#content {padding-top: 80px; min-height: 450px}
+#content {padding: 55px 0 0}
+#banner {height: 180px;overflow: hidden;}
+#banner .frame {background: rgba(0, 0, 0, .7);height: 100%;width: 70%;overflow: hidden;max-width: 300px;}
+#banner .photo {background: #fff no-repeat center;background-size: 100%;border: 4px solid #fff;height: 100px;margin: 20px auto 0;width: 100px;}
+#banner .photo img {height: 100%; width: 100%}
+#banner .photo .upload-image {margin: 66px 0 0 -4px;width: 100px;}
+
+#banner .name {
+    color: #fff;
+    font-size: 18px;
+    font-weight: 700;
+}
+
+#banner .name.visible-xs {
+    text-align: center;
+}
 
 #cover {
     background: #fff no-repeat center top;
+    background-size: cover;
     float: left;
     width: 100%;
     overflow: hidden;
 }
-@media (min-width: 476px) {
-    #cover {background-size: 100% auto;}
+#cards {clear: both}
+#stage .card {background: #fff;float: left;margin-top: 25px;overflow: hidden;padding: 15px;width: 100%;}
+#stage .card h3 {font-size: 16px;font-weight: 700;margin-top: 0;}
+#stage .card h3 a {color: #555;}
+#stage .card h3 img {margin-right: 6px}
+#stage .card > div:first-of-type h4 {margin: 0 0 .5em;}
+
+@media (max-width: 767px) {
+    #cards > .row {margin: 0}
+    #cards, .events-col1, .events-col2 {padding: 0;}
+    #stage .card {padding: 10px}
 }
-#banner {height: 300px; overflow: hidden}
+@media (min-width: 768px) {
+    #content {padding: 80px 15px 0; min-height: 450px}
+    #banner {height: 300px;overflow: hidden;}
+    #banner .frame {margin: auto; width: 90%; overflow: hidden}
+    #banner .photo {height: 142px; margin: 79px auto; width: 142px}
+    #banner .name {font-size: 21px;text-align: center;}
+    #banner .photo .upload-image {margin: 108px 0 0 -4px; width: 142px}
+}
 
 #banner .progress {
     visibility: hidden;
@@ -23,29 +55,13 @@
 #banner .progress-bar {
     background: #2196F3
 }
-#banner .frame {background: rgba(0, 0, 0, .7); height: 100%; margin: auto; width: 90%; overflow: hidden}
-#banner .photo {background: #fff no-repeat center; background-size: 100%; border: 4px solid #fff; height: 142px; margin: 79px auto; width: 142px}
-#banner .photo img {height: 100%; width: 100%}
 #banner .upload-image {background-color: rgba(0,0,0, .6); color: #eee; display: none; font-size: 13px;
     height: 30px; padding: 5px; position: absolute; text-align: center}
-#banner .photo .upload-image {margin: 108px 0 0 -4px; width: 142px}
 #banner > .upload-image {margin: 15px 0 0 535px; width: 180px}
 @media (min-width: 1200px) {
     #banner > .upload-image {margin-left: 625px}
 }
 #banner:hover > .upload-image, #banner .photo:hover .upload-image {display: block}
-
-#banner h2 {
-    color: #fff;
-    font-size: 21px;
-    font-weight: 700;
-    margin: -54px auto 0;
-}
-
-#banner h2.visible-xs {
-    text-align: center
-}
-#banner .frame {float: none; margin: auto; width: 90%}
 @media (min-width: 476px) {
     #banner .frame {float: left; overflow: hidden; width: 240px}
 
@@ -56,7 +72,7 @@
     }
 }
 #cover nav {}
-#stage {float: left; width: 100%}
+#stage {float: left;width: 100%;}
 @media (min-width: 992px) {
     #stage {width: 730px}
     #stage .container-fluid {padding: 0}
@@ -64,11 +80,6 @@
 @media (min-width: 1200px) {
     #stage {width: 820px}
 }
-#stage .card {background: #fff;float: left;margin-top: 25px;overflow: hidden;padding: 15px;width: 100%;}
-#stage .card h3 {font-size: 16px;font-weight: 700;margin-top: 0;}
-#stage .card h3 a {color: #555;}
-#stage .card h3 img {margin-right: 6px}
-#stage .card > div:first-of-type h4 {margin: 0 0 .5em;}
 
 #stage .card h4 { /*color: #666;*/
     font-size: 17px;
@@ -129,6 +140,7 @@
     .access-request .details {clear: none;float: left;margin-left: 15px;padding-top: 0;width: 570px;}
 }
 @media (min-width: 992px) {
+    #cover {max-width: 820px;}
     .access-request .logo {float: left;text-align: center;width: 130px;}
     .access-request .logo img {float: none; width: 100px}
 }
@@ -152,7 +164,7 @@
 }
 #ad-space-right div#ad {background: #ddd; height: 360px; margin-top: 15px}
 
-#admin-content.embed {background: #fff; height: 850px}
+#admin-content .embed {background: #fff; float: left; height: 850px; width: 100%}
 
 iframe#billing-stage {border: none;margin: -15px 0 0 -15px;height: 170%;width: 100%;}
 
