--- a/theming/templates/theming/theme_list.html
+++ b/theming/templates/theming/theme_list.html
@@ -18,26 +18,30 @@
 {% endblock %}
 
 {% block admin_content %}
-    <div id="admin-content" class="container-fluid">
-        <div id="results">
-            <ul class="tiles object-list" style="padding: 20px 0 0 0">
-            {% for theme in theme_list %}
-                {% if theme == config.theme %} {# Only show active theme for now #}
-                <li class="ik-li theme tile" id="{{ theme.id }}" data-id="{{ theme.id }}">
-                    <a href="{% url 'theming:configure_theme' theme.id %}" class="image" style="background-image: url({{ settings.IKWEN_MEDIA_URL }}{{ theme.preview.name }})"></a>
-                    <div class="info">
-                        <span class="name">{{ theme.name }}</span>
-                        <p class="about">{{ theme.template.name }}</p>
-                    </div>
-                    <div class="actions">
-                        <i class="glyphicon glyphicon-cog conf-{{ theme.slug }}" data-toggle="modal" data-target="#conf-{{ theme.slug }}" title="{% trans "Configure" %}"></i>
-                    </div>
-                    <i class="glyphicon glyphicon-ok check{% if theme == config.theme %} active{% endif %}"
-                       title="{% if theme.is_active %}{% trans "Cancel" %}{% else %}{% trans "Activate" %}{% endif %}"></i>
-                </li>
-                {% endif %}
-            {% endfor %}
-            </ul>
+    <div id="admin-content">
+        <div class="container-fluid">
+            <div id="results">
+                <ul class="tiles object-list">
+                {% for theme in theme_list %}
+                    {% if theme == config.theme %} {# Only show active theme for now #}
+                    <li class="ik-li theme tile" id="{{ theme.id }}" data-id="{{ theme.id }}">
+                        <div class="content">
+                            <a href="{% url 'theming:configure_theme' theme.id %}" class="image" style="background-image: url({{ settings.IKWEN_MEDIA_URL }}{{ theme.preview.name }})"></a>
+                            <div class="info">
+                                <span class="name">{{ theme.name }}</span>
+                                <p class="about">{{ theme.template.name }}</p>
+                            </div>
+                            <div class="actions">
+                                <i class="glyphicon glyphicon-cog conf-{{ theme.slug }}" data-toggle="modal" data-target="#conf-{{ theme.slug }}" title="{% trans "Configure" %}"></i>
+                            </div>
+                            <i class="glyphicon glyphicon-ok check{% if theme == config.theme %} active{% endif %}"
+                               title="{% if theme.is_active %}{% trans "Cancel" %}{% else %}{% trans "Activate" %}{% endif %}"></i>
+                        </div>
+                    </li>
+                    {% endif %}
+                {% endfor %}
+                </ul>
+            </div>
         </div>
     </div>
 {% endblock %}
