--- a/static/ikwen/css/base.css
+++ b/static/ikwen/css/base.css
@@ -122,7 +122,7 @@ time {color: #888;float: right;font-size: 11px; font-weight: normal; padding: 0;
 .inner-shade {box-shadow: inset 0 1px 3px rgba(0, 0, 0, .15);}
 .subtle-shade {box-shadow: 0 1px 2px 0 rgba(0, 0, 0, .15);}
 #navbar {height: 55px;min-height: 50px;position: fixed;width: 100%;}
-.menu-button {float: left;margin: 20px 10px 0;}
+.menu-button {float: left;margin: 20px 20px 0 10px;display: none;}
 .icon-bar {
     background: #fff;
     display: block;
@@ -133,7 +133,7 @@ time {color: #888;float: right;font-size: 11px; font-weight: normal; padding: 0;
 }
 #navbar .glyphicon {color: #fff;cursor: pointer;font-size: 18px;}
 #navbar .back {display: none;float:left;font-size: 24px;margin: 12px 15px 0 10px;}
-.navbar-default .navbar-brand {padding: 18px 0 0 0;}
+.navbar-default .navbar-brand {padding: 18px 0 0 10px;}
  #navbar .navbar-header {height: 55px;overflow: hidden}
 #navbar-search {
     display: none;
@@ -198,7 +198,8 @@ time {color: #888;float: right;font-size: 11px; font-weight: normal; padding: 0;
     .ik-li .meta {display: block}
     .input-sm {font-size: 15px}
     #navbar > .container-fluid {padding: 0;}
-    .navbar-default .navbar-brand {max-width: 133px;overflow: hidden;}
+    .navbar-default .navbar-brand {max-width: 115px;overflow: hidden;}
+    .navbar-default .navbar-brand > * {float: left; width: 300%}
     .container-fluid > strong.navbar-header {float: left;margin-left: 0;}
     #navbar-results {border-top: 1px solid #eee}
     .nav-tabs.swiper-wrapper {background: #f8f6f6; border-bottom: none}
